fix commit de colaboração

--- a/docs/Base/1.4.ParticipacoesBase.md
+++ b/docs/Base/1.4.ParticipacoesBase.md
@@ -56,7 +56,7 @@ Fonte: Rodrigo Orlandi(Autor)
 |---------------|--------------|--------------------------------------------------------------------------------|---------------------------|
 | Rodrigo Orlandi  | 1. Realização do Diagrama BPMN Principal   |  Boa  | 1. Demonstrado pela issue com commit [neste link](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/issues/23)  |
 | Rodrigo Gontijo  | 1. Elaboração do BPMN de login; <br> 2. Elaboração do BPMN de moderar.   |  Boa  | BPMNs - [commit](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/d42b72a6984f7cf7f8d60400805912e9ccd0512f).  |
-| Henrique Galdino | 1. Realização do Diagrama BPMN Login e Moderar   | Boa   | 1. Implementação [neste commit](MUDA AQUI RODRIGO)  |
+| Henrique Galdino | 1. Realização do Diagrama BPMN Login e Moderar   | Boa   | 1. Implementação [neste commit](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/31b0902910064da4b409a0f78254d476bb552b52)  |
 | João Marques     | 1. Realização do Diagrama BPMN Principal   |  Boa  | 1. Demonstrado pela issue com commit [neste link](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/issues/23)  |
 | João Paulo       |    |    |   |
 | Fernando Gabriel | 1. Participação da implementação da Metodologia BPMN   |   Boa  | 1. Implementação [neste commit](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/c9d9a01fe8a395ea12e45d6a98fb288e4eb32e9e);  |
