--- a/docs/Base/1.1.2.Sketch.md
+++ b/docs/Base/1.1.2.Sketch.md
@@ -1,3 +1,5 @@
+# Sketch
+
 ## Introdução
 
 O Sketch é a etapa em que cada integrante da equipe expressa suas ideias por meio de desenhos, com base no que foi definido anteriormente na etapa do Unpack. O objetivo é representar visualmente soluções possíveis, levando em conta a visão individual de cada participante [(SERRANO)](#referência). Mesmo quem não tem habilidades com desenho é incentivado a contribuir. Para padronizar a representação, utiliza-se o formato de Rich Pictures, onde cada pessoa cria o modelo, de acordo com o escopo definido.
